[package]
authors = ["rotemy"]
edition = "2018"
name = "venta"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
futures = "0.3.7"
pulsar = "1.0.1"
serde = "1.0.117"
serde_json = "1.0.59"
tokio = {version = "0.2.0", features = ["sync", "rt-core"]}
log = "0.4.11"
chrono = "0.4.19"
