[package]
authors = ["vmalloc"]
description = "Ergonomic Rusty wrappers around pub-sub services"
documentation = "https://docs.rs/venta"
edition = "2018"
homepage = "https://github.com/vmalloc/venta"
keywords = ["pulsar", "client", "messaging", "pubsub"]
license = "MIT OR Apache-2.0"
name = "venta"
readme = "README.md"
repository = "https://github.com/vmalloc/venta"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
metrics = ["prometheus", "lazy_static"]

[dependencies]
anyhow = "1.0.34"
chrono = "0.4.19"
futures = "0.3.7"
lazy_static = {version = "1.4.0", optional = true}
log = "0.4.11"
prometheus = {version = "0.12.0", optional = true}
pulsar = "3.0.0"
serde = "1.0.117"
serde_json = "1.0.59"
tokio = {version = "1.6.2", features = ["sync", "rt"]}
url = "2.2.0"
